# Chips

./: .gitignore  README.rst  c2verilog  chips_c.py  csim  run_server  setup.cfg  setup.py
.github/workflows/: python_build.yml
chips/api/: api.py
chips/chipsweb/: examples.py  webapp.py
chips/chipsweb/templates/: page.html
chips/compiler/: allocator.py  builtins.h  compiler.py  fpu.py  instruction_utils.py  macro_expander.py  parse_tree.py  parser.py  profiler.py  python_model.py  register_map.py  tokens.py  verilog_area.py
chips/components/: components.py
chips/utils/: block_diagram.py  debugger.py  gui_instance.py  gui_report.py
chips_c/: Makefile  chips_c_wrap.c
docs/source/: conf.py  index.rst
docs/source/home/: index.rst
docs/source/tutorial/: index.rst
docs/source/user_manual/: index.rst  install.rst
examples/: chips_lib.v  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py
scripts/: publish_docs  release_checklist.py  update_fpu.py
test_suite/: test_all  test_api.py  test_compiler  test_components
