[metadata]
name = Chips-python
version = 2.2.1
author = Jon Dawson
author_email = chips@jondawson.org.uk
description = Design hardware with Python
keywords = Verilog, FPGA, C, HDL, Synthesis, VHDL
url = http://benfre.github.io/Chips/
download_url = http://github.com/benfre/Chips
long_description = file: README.rst
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Code Generators

[options]
py_modules = chips_c
packages =
    chips
    chips.chipsweb
    chips.compiler
    chips.api
    chips.components
    chips.utils
install_requires = numpy
scripts = c2verilog, csim

[options.package_data]
chips.compiler = builtins.h; include/*.h
chips.utils = icons/*.png
chips.chipsweb = templates/*.html; static/*
chips.components = verilog/*.v
